--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
-name = "BalanceChecker"
+name = "etherbalance"
 version = "0.1.0"
-authors = ["Valentin Kettner <vakevk+git@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+anyhow = "1"
+ethcontract = "0.4"
+futures = { version = "0.3", features = ["compat"] }
+prometheus = { version = "0.7", default-features = false }
+rouille = "3"
+serde = { version = "1", features = ["derive"] }
+structopt = "0.3"
+toml = "0.5"
+url = "2"
+web3 = { version = "0.10", default-features = false, features = ["http", "tls"] }
