--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: rust
 rust: stable
 cache: cargo
+before_install:
+  - rustup component add clippy rustfmt
+  - cargo clippy --version
+  - cargo fmt --version
+script:
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo fmt -- --check
+  - cargo clippy --all-features -- -D warnings
