Do not cache all of cargo
See https://github.com/gnosis/etherbalance/pull/1#discussion_r387332216

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: rust
 rust: stable
-cache: cargo
+cache:
+  directories:
+    - $HOME/.cargo
+    - $HOME/.rustup
+before_cache:
+  - rm -rf /home/travis/.cargo/registry
 before_install:
   - rustup component add clippy rustfmt
   - cargo clippy --version
