--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 anyhow = "1"
 ethcontract = "0.15"
-futures = { version = "0.3", features = ["compat"] }
+futures = { version = "0.3" }
 prometheus = { version = "0.13", default-features = false }
 rouille = "3"
 serde = { version = "1", features = ["derive"] }
 structopt = "0.3"
+tokio = { version = "1.12" }
 toml = "0.5"
 url = "2"
 web3 = { version = "0.17", default-features = false, features = ["http"] }
