changing develop back to master

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Deploy Develop
         if: github.ref == 'refs/heads/master'
-        run: bash docker/deploy.sh develop
+        run: bash docker/deploy.sh master
       - name: Deploy Tag
         if: startsWith(github.ref, 'refs/tags/')
         run: bash docker/deploy.sh ${GITHUB_REF##*/}
