--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
+      AUTODEPLOY_TAG: develop
       AUTODEPLOY_URL: ${{ secrets.AUTODEPLOY_URL }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
