--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 anyhow = "1.0"
+clap = { version = "3.0", features = ["derive"] }
 ethcontract = { version = "0.15", default-features = false, features = ["derive"] }
 prometheus = { version = "0.13", default-features = false }
 rouille = { version = "3.5", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
-structopt = "0.3"
 tokio = { version = "1.12", features = ["macros", "rt", "time"] }
 toml = "0.5"
 url = "2.0"
