--- a/example_config.toml
+++ b/example_config.toml
@@ -1,4 +1,9 @@
-[tokens]
+[[networks]]
+# Url of ethereum node to communicate with.
+name = 'mainnet'
+url = 'http://mainnet.node'
+
+[networks.tokens]
 # A key names the address of an ERC20 token in a human readable form.
 # A value specifies the address of the token. The address is not case sensitive
 # but must start with "0x".
@@ -6,7 +11,7 @@
 usdt = "0xdac17f958d2ee523a2206206994597c13d831ec7"
 usdc = "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
 
-[addresses]
+[networks.addresses]
 # A key names the address whose balances should be monitored in a human
 # readable form.
 # * addresses is the address associated with the name.
@@ -17,3 +22,12 @@ usdc = "0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"
 #   address' metric.
 personal-wallet = { address = "0xbe0eb53f46cd790cd13851d5eff43d12404d33e8", ether=true, tokens = ["usdt", "usdc"], tag = "tag" }
 company-wallet = { address = "0x3f5ce5fbfe3e9af3971dd833d26ba9b5c936f0be", ether=true, tokens = ["usdt", "usdc"] }
+
+[[networks]]
+name = 'rinkeby'
+url = 'http://rinkeby.node'
+
+[networks.tokens]
+
+[networks.addresses]
+personal-wallet-rinkeby = { address = "0xbe0eb53f46cd790cd13851d5eff43d12404d33e8", ether=true, tokens = [] }
